syntax = "proto3";

option go_package = "github.com/abdi-edoc-de/grp_course_pro/greet/proto";


message GreetRequest {
    string name = 1;

}

message GreetResponse {
    string result = 1;
}

service GreetService {
    rpc Greet(GreetRequest) returns (GreetResponse);
    rpc GreetManyTimes ( GreetRequest) returns (stream GreetResponse);
    rpc LongGreet(stream GreetRequest) returns (GreetResponse);
    rpc GreetEveryone(stream GreetRequest) returns ( stream GreetResponse);             
}



